crates/reinhardt-core/macros/tests/ui/hook/fail/hook_struct_with_fields.rs
use reinhardt_macros::hook;

#[hook(on = runserver)]
struct MyHook {
    config: String,
}

fn main() {}
